# apps/worker/src/roommate-requests/domain/interface/roommate-requests.repository.ts
@@ -1,4 +1,5 @@
 import type {
+  PropertyData,
   PropertyUpdatedPayload,
   RoommateRequestBlob,
 } from '@homie/events';
@@ -9,6 +10,7 @@ export interface IRoommateRequestsRepository {
     propertyId: string,
     property: PropertyUpdatedPayload,
   ): Promise<void>;
+  getProperty(propertyId: string): Promise<PropertyData | null>;
 }
 
 export const ROOMMATE_REQUESTS_REPOSITORY = Symbol(
